[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Madi <abaymadi1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-multipart = "^0.0.6"
ormar = {extras = ["postgresql"], version = "^0.12.1"}
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
